java 21.0.02 and Spring Boot 3.2.5-SNAPSHOT